--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,10 @@ text-decoration: none;
   margin-bottom: 40px;
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
+  font-size: 0.9em;
 }
+
+
 
 /* === Bloc "Calandrier" === */
 #calendrier{
