--- a/css/annuaire.css
+++ b/css/annuaire.css
@@ -8,8 +8,7 @@
 
 /* Conteneur principal de la page */
 #main-panel{
-  height: 1024px;
-  min-height: 950px;
+  min-height: auto;
   background-color: white;
   margin-bottom: 40px;
   border: solid 1px grey;
@@ -19,21 +18,23 @@
 
 /*Forme un petit cadre qui fait ressortir le profil*/
 .sub-pane1{
-  min-height: 600px;
+  min-height: auto;
   margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
-  border-radius: 50px;
-  box-shadow: 0px 0px 10px #D5D5D6;
 }
 
 /*On regroupe l'image et le texte descriptif sous un même conteneur*/
 .wrap-profil{
   /*border: solid 1px;*/
-  padding-top: 200px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
+  border-radius: 50px;
+  box-shadow: 0px 0px 10px #D5D5D6;
+  margin-bottom: 20px;
 }
 
 .round-image{
@@ -44,6 +45,7 @@
   height:150px;
   box-shadow: 0px 0px 10px #343434;
   margin-right: 100px;
+  margin-left: 20px;
 }
 
 .sub-pane2{
