Modifications mineures au niveau des animations js.

--- a/css/squelette.css
+++ b/css/squelette.css
@@ -8,7 +8,13 @@
 
 body{
   background-image: url(../images/pattern/pattern.png);
+}
 
+.body-fixed{
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 h1{
