--- a/css/index.css
+++ b/css/index.css
@@ -60,6 +60,39 @@ text-decoration: none;
   padding-bottom: 20px;
 }
 
+#smoke-background{
+    background-color: rgba(44, 44, 44, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+#wrap-message{
+    width: 900px;
+    margin: 50vh auto;
+    min-height: 300px;
+    transform: translateY(-50%);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 10px;
+    background-color: #181A18;
+}
+
+#theMessage{
+    width:700px;
+    margin:auto;
+    text-align:justify;
+
+}
+
+#theMessage p{
+    background-color: white;
+    padding: 15px 20px 15px 20px;
+    border-radius: 5px;
+}
 
 
 /* === Bloc "Calandrier" === */
