--- a/css/presentation.css
+++ b/css/presentation.css
@@ -48,17 +48,55 @@ text-decoration: none;
 #newmessages{
   background-color: white;
   box-shadow: 1px 1px 7px ;
-  min-height: 300px;
+  min-height: 100px;
   margin-bottom: 40px;
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
+  font-size: 0.9em;
+  padding-bottom: 20px;
 }
+
+#smoke-background{
+    background-color: rgba(44, 44, 44, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+#wrap-message{
+    width: 900px;
+    margin: 50vh auto;
+    min-height: 300px;
+    transform: translateY(-50%);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 10px;
+    background-color: #181A18;
+}
+
+#theMessage{
+    width:700px;
+    margin:auto;
+    text-align:justify;
+
+}
+
+#theMessage p{
+    background-color: white;
+    padding: 15px 20px 15px 20px;
+    border-radius: 5px;
+}
+
 
 /* === Bloc "Calandrier" === */
 #calendrier{
   background-color: white;
   box-shadow: 1px 1px 7px ;
-  min-height: 300px;
+  min-height: 200px;
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
+  padding-bottom: 10px;
 }
