Modification des photos

--- a/css/squelette.css
+++ b/css/squelette.css
@@ -105,8 +105,9 @@ nav{
 }
 
 .actif{
-  background-color: #0C0E0C;
+  background-color: #A09E90;
 }
+
 
 /* === Conteneur principal === */
 #wrap-container{
