Vérification des indentations des pages

--- a/css/annuaire.css
+++ b/css/annuaire.css
@@ -9,9 +9,9 @@
 /* Conteneur principal de la page */
 #main-panel{
   min-height: auto;
-  background-color: white;
+  /*background-color: white;*/
   margin-bottom: 40px;
-  border: solid 1px grey;
+  /*border: solid 1px grey;*/
   border-radius: 10px;
   padding-bottom: 30px;
 }
@@ -26,15 +26,15 @@
 
 /*On regroupe l'image et le texte descriptif sous un même conteneur*/
 .wrap-profil{
-  /*border: solid 1px;*/
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
   border-radius: 50px;
   box-shadow: 0px 0px 10px #D5D5D6;
   margin-bottom: 20px;
+  background-color: white;
 }
 
 .round-image{
@@ -44,17 +44,22 @@
   width:150px;
   height:150px;
   box-shadow: 0px 0px 10px #343434;
-  margin-right: 100px;
-  margin-left: 20px;
+  margin-right: 50px;
+  margin-left: 50px;
+  margin-top: 20px;
+  vertical-align: middle;
 }
 
 .sub-pane2{
-  margin-top: 20px;
+  /*margin-top: 20px;*/
   /*border: solid 1px grey;*/
   width: 400px;
   display: inline-block;
   vertical-align: top;
   text-align: justify;
+  padding: 20px;
+  background-color: white;
+  border-radius: 20px;
 }
 
 .inside-panel-link h2:hover{
