--- a/css/index.css
+++ b/css/index.css
@@ -107,3 +107,10 @@ text-decoration: none;
   border-top-right-radius: 10px;
   padding-bottom: 10px;
 }
+
+#wrap-float-event{
+    position: absolute;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 5px 5px 2px;
+}
