--- a/css/presentation.css
+++ b/css/presentation.css
@@ -25,7 +25,7 @@
   margin-bottom: 40px;
   border: solid 1px grey;
   border-radius: 10px;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 .inside-panel-link h2:hover{
@@ -37,7 +37,6 @@ text-decoration: none;
 }
 
 .panel-text{
-  padding-left: 20px;
   text-align: justify;
   width:440px;
   margin-left: 20px;
@@ -45,10 +44,8 @@ text-decoration: none;
 }
 
 .panel-part{
-  padding-left: 20px;
   text-align: justify;
   width:440px;
-  margin-left: 20px;
   margin-bottom: 20px;
   display: inline-block;
 }
