Nettoyage du code

--- a/css/squelette.css
+++ b/css/squelette.css
@@ -136,5 +136,7 @@ nav{
 
 /* === Footer === */
 footer{
-  min-height: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
 }
